# powercore

./: README.md  clean_data.csv  commit_poet.py  data_sanity.py  focuscli.py  logsage.py  pattern_prophet.py  powercore  powercore.cmd  powercore.py  procgen_art.py  semantic_diff.py  snipvault.py  tmp.csv
examples/: order.diff
examples/after/: order.py
examples/before/: order.py
examples/history/: bash_history_sample.txt  git_log_sample.txt
procgen-art/: Cargo.toml
procgen-art/src/: main.rs
