[package]
name = "procgen-art"
version = "0.1.0"
edition = "2021"
description = "Terminal generative art seeded by live system metrics"
license = "MIT"

[dependencies]
crossterm = "0.27"
rand = "0.8"
sysinfo = { version = "0.30", default-features = false, features = ["system", "cpu", "disk", "network"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
